force-app/main/default/objects/Royalty_Interest__c/Royalty_Interest__c.object-meta.xml
<CustomObject>
    <label>Royalty Interest</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Royalty Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Royalty Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>