force-app/main/default/objects/Royalty_Interest__c/fields/Account_Premise_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Account_Premise_Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Premise Ownership</label>
    <referenceTo>Account_Premise_Ownership__c</referenceTo>
    <relationshipLabel>Royalty Interests</relationshipLabel>
    <relationshipName>Royalty_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>