force-app/main/default/objects/Royalty_Interest__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>% Interest</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>