force-app/main/default/objects/Royalty_Interest__c/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <label>Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working Interest (WI)</fullName>
            </value>
            <value>
                <fullName>Royalty Interest (RI)</fullName>
            </value>
            <value>
                <fullName>Overriding Royalty Interest (ORI)</fullName>
            </value>
            <value>
                <fullName>Marketing Interest (MI)</fullName>
            </value>
            <value>
                <fullName>Primary Working Interest (PWI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>