force-app/main/default/objects/Royalty_Interest__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Royalty Interests (Payee)</relationshipLabel>
    <relationshipName>Royalty_Interests1</relationshipName>
    <type>Lookup</type>
</CustomField>