force-app/main/default/objects/Royalty_Interest__c/fields/Suspense_Code__c.field-meta.xml
<CustomField>
    <fullName>Suspense_Code__c</fullName>
    <label>Suspense Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ATX</fullName>
            </value>
            <value>
                <fullName>BAD</fullName>
            </value>
            <value>
                <fullName>DED</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>DOI</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>LEG</fullName>
            </value>
            <value>
                <fullName>LVY</fullName>
            </value>
            <value>
                <fullName>MOE</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>NMS</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>PSA</fullName>
            </value>
            <value>
                <fullName>PSR</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>ROT</fullName>
            </value>
            <value>
                <fullName>RP</fullName>
            </value>
            <value>
                <fullName>TID</fullName>
            </value>
            <value>
                <fullName>TR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>